# presistence

./: .ENV  .gitignore  Cargo.toml
data/: ans_record.csv  children.csv  parent.csv  questions.txt  quiz.csv  quiz_level.csv
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_parent_table.rs  m20220101_000001_create_table.rs  m20240207_181705_create_children_table.rs  m20240207_183220_create_quiz_table.rs  m20240207_184348_create_answer_record_table.rs  m20240209_142558_insert_records.rs  m20240213_020340_add_parent_authorize.rs  m20240215_022426_parent_add_pwd_version.rs  m20240314_033251_fix_quiz_ploblem.rs  m20240314_090754_child_check_create.rs  m20240325_022626_child_select_quiz_group_crate.rs  m20240415_100440_update_safty_pwd.rs  m20240417_005652_ans_score.rs  m20240417_020951_update_ans_score.rs
sql/init-sql/: setup.sql
src/: axum_starter.rs  lib.rs
src/entities/: ans_records.rs  answer_record.rs  child_check.rs  child_quiz_group.rs  children.rs  mod.rs  parent.rs  prelude.rs  quiz.rs  quiz_groups.rs  quiz_level.rs  quizes.rs
src/input_models/: mod.rs  parents.rs
src/operations/: mod.rs
src/operations/answer_record/: insert.rs  mod.rs  retrieve.rs
src/operations/child_check/: insert.rs  mod.rs  retrieve.rs
src/operations/child_quiz_group/: delete.rs  insert.rs  mod.rs
src/output_models/: answer_record.rs  child_check.rs  mod.rs
src/service/: child_statical.rs  mod.rs  new_ans_record.rs  next_quiz.rs  quiz_record.rs
src/utils/: mod.rs  predict_correct.rs
srcipts/: generate.bat  new_migrate.bat
(+23 files in other folders)
