[package]
name = "presistence"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.77"
axum-core = "0.4.3"
axum-starter = "0.10.0"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
http = "1.0.0"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.196", features = ["derive"] }
typed-builder = "0.18.1"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util", "macros"] }
